# test-task-tg-profile

./: .dockerignore  .gitignore  README.md  docker-compose.yml  nginx.conf  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db_helper.py  main.py  utils.py
backend/app/api/endpoints/: share.py  user.py
backend/app/models/: user.py
backend/app/schemas/: user.py
bot/: Dockerfile  pyproject.toml
bot/app/: bot.py  config.py  db.py  models.py
deploy/: inventort.ini  inventory.ini.template  nginx-frontend.conf.j2  setup.yml  setyp.yml
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts
frontend/src/store/: user.ts
frontend/src/types/: telegram.d.ts
frontend/src/views/: HomeView.vue  ProfileView.vue
